--- a/index.html
+++ b/index.html
@@ -25,17 +25,19 @@
             <a href="#certiAchiev">Certificates & Achievements</a>
         </nav>
         <header>
-            <div class="container">
+            <div class="container0">
+                <img src="Me.jpg" alt="Sultana, Passionate Coder">
+                <div class="header-text">
                 <h1>Hi, I'm Sultana</h1>
                 <p>Full-stack Developer | </p>
                 <a href="#DownloadCV" class="btn">Download my CV</a>
-                <a href="#Contact" class="btn">Contact me</a>
-                <img src="Me.jpg" alt="Sultana, Passionate Coder">
+                <a href="#contact" class="btn">Contact me</a>
+                </div>
             </div>
         </header>
 
         <section id="about">
-            <div class="container">
+            <div class="container1">
                 <h2>About Me</h2>
                 <p>Hey, there! I'm a passionate developer with 5+ experience in creating web projects using HTML5, CSS3, Node.js, React.js, pHp & MySQL. Recently, I'm studying on my passionate career field, Computer Science in IIUC.</p>
             </div>
@@ -107,45 +109,44 @@
                 <h2>Projects</h2>
                 <div class="project">
                     <h3>IIUC Website(Course Project)</h3>
-                    <p>Brief description of the project.</p>
+                    <p>In my 2nd semester, we developed this website using HTML, CSS, JavaScript, PHP, and MySQL as part of our compulsory coursework. Along with strengthening our technical skills, we also gained important soft skills such as teamwork, project presentation, communication, team management, and active listening. We showcased the project using a PowerPoint presentation.</p>
                     <a href="#">Live</a>
                     <a href="">Source Code</a>
                 </div>
                 <div class="project">
                     <h3>MOZITO25</h3>
-                    <p>Brief description of the project.</p>
+                    <p>MOZITO25 is a gaming platform featuring multiple games built with React. As a React enthusiast, I created this project as a memorable achievement of late 2025. I also used Git and GitHub for version control and deployment.</p>
                     <a href="#">Live</a>
                     <a href="">Source Code</a>
                 </div>
                 <div class="project">
                     <h3>Raiyan Engineering</h3>
-                    <p>Brief description of the project.</p>
+                    <p>Raiyan Engineering is a time-saving website I built for a startup company. I developed the front end using HTML5, CSS, and JavaScript, and added EmailJS to send PDFs directly to the service provider. For database management, I used PHP, MySQL, and XAMPP. The project was deployed using InfinityFree for a smoother GitHub-based deployment workflow.
+Working on this project in November 2025 was a great experience, and the company appreciated my work with positive feedback.</p>
                     <a href="#">Live</a>
                     <a href="">Source Code</a>
                 </div>
                 <div class="project">
                     <h3>Landing Page(1)</h3>
-                    <p>Brief description of the project.</p>
+                    <p>Landing Page (1) is inspired by a UI/UX design from the Flora & Fauna website. The original design was a simple demo made with HTML, CSS, and a touch of JavaScript, but I extended it by adding PHP and MySQL features. I worked on this project in November 2025.</p>
                     <a href="#">Live</a>
                     <a href="">Source Code</a>
                 </div>
                 <div class="project">
-                    <h3>Landing Page(2)</h3>
-                    <p>Brief description of the project.</p>
-                    <a href="#">Live</a>
-                    <a href="">Source Code</a>
-                <div class="project">
                     <h3>Sultana's Brand</h3>
-                    <p>Brief description of the project.</p>
+                    <p>Inspired by my mother's expertise in sewing and embroidery, I began practicing various stitches back in 2017. In December of last year, I decided to learn embroidery properly and continued until mid-2025. During this time, I explored different stitches, the history of embroidery, various sectors within the field, and color combinations. Although I didn’t receive much positive feedback, I believe every effort deserves a place in my showcase.
+So, I created this website using HTML and CSS to represent my small journey. I also have a future business plan for Sultana’s Brand, as I dream of contributing to reducing unemployment in my country—there are so many skilled and talented people in this craft.</p>
                     <a href="#">Live</a>
                     <a href="">Source Code</a>
                 </div>
                 <div class="project">
                     <h3>Course Seller BD</h3>
-                    <p>Brief description of the project.</p>
+                    <p>Course Seller BD is a platform I built to sell educational courses directly through a website. Users can purchase a course for 150 BDT to upgrade their knowledge in various science and technology subjects. I developed the site using React for the frontend, PHP and MySQL for the backend, ensuring smooth user interaction, secure payment flow, and proper database management.</p>
                     <a href="#">Live</a>
                     <a href="">Source Code</a>
             </div>
+        </section>
+
             <section id="contact">
                 <div class="container">
                     <h2>Contact Me</h2>
@@ -253,10 +254,11 @@
                 </div>
                 </section>
 
-            <section id="footer">
+            <footer>
                 <div class="container">
                     <p>&copy; 2025 Sultana. All rights reserved.</p>
                 </div>
+            </footer>
     </body>
 
     
