--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ So, I created this website using HTML and CSS to represent my small journey. I a
                         <img src="" alt="1st semester">
                         </div>
                         <div class="result">
-                        <img src="" alt="2nd semester">
+                        <img src="unnamed (1).png" alt="2nd semester">
                         </div>
                     </div>
                 </div>
@@ -288,3 +288,4 @@ So, I created this website using HTML and CSS to represent my small journey. I a
 
     
 </html>
+
