--- a/index.html
+++ b/index.html
@@ -260,8 +260,8 @@ So, I created this website using HTML and CSS to represent my small journey. I a
                         Bachelor of Science in Computer & Communication Engineering, IIUC (Ongoing)
                     </ul>
                     <div class="carousel">
-                        <div class="result active">
-                        <img src="" alt="1st semester">
+                        <div class="result">
+                        <img src="unnamed.png" alt="1st semester">
                         </div>
                         <div class="result">
                         <img src="unnamed (1).png" alt="2nd semester">
@@ -288,4 +288,5 @@ So, I created this website using HTML and CSS to represent my small journey. I a
 
     
 </html>
+
 
