--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ So, I created this website using HTML and CSS to represent my small journey. I a
                 <section id="certiAchiev">
                 <div class="container">
                     <h2>Certificates & Achievements</h2>
-                    <img src="" alt="certificate 1">
+                    <img src="image_4a8ef83b-be80-4bea-b008-2894b7db23d320251127_152716.jpg" alt="Digital Literacy">
                     <img src="" alt="achievement 1">
                 </div>
                 </section>
@@ -288,5 +288,6 @@ So, I created this website using HTML and CSS to represent my small journey. I a
 
     
 </html>
+
 
 
