--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@ So, I created this website using HTML and CSS to represent my small journey. I a
                 <div class="container">
                     <h2>Certificates & Achievements</h2>
                     <img src="image_4a8ef83b-be80-4bea-b008-2894b7db23d320251127_152716.jpg" alt="Digital Literacy">
-                    <img src="" alt="achievement 1">
+                    <img src="image_4b4f29fb-0c73-4b31-b415-bec188cb93f420251127_152709.jpg" alt="Business Email">
                 </div>
                 </section>
 
@@ -288,6 +288,7 @@ So, I created this website using HTML and CSS to represent my small journey. I a
 
     
 </html>
+
 
 
 
