--- a/index.html
+++ b/index.html
@@ -275,6 +275,7 @@ So, I created this website using HTML and CSS to represent my small journey. I a
                     <h2>Certificates & Achievements</h2>
                     <img src="image_4a8ef83b-be80-4bea-b008-2894b7db23d320251127_152716.jpg" alt="Digital Literacy">
                     <img src="image_4b4f29fb-0c73-4b31-b415-bec188cb93f420251127_152709.jpg" alt="Business Email">
+                    <img src="image_7a1a80a2-771a-43ee-8a05-2dff0d29734520251127_152714.jpg" alt="Participation on CP Contest">
                 </div>
                 </section>
 
@@ -288,6 +289,7 @@ So, I created this website using HTML and CSS to represent my small journey. I a
 
     
 </html>
+
 
 
 
