--- a/index.html
+++ b/index.html
@@ -276,6 +276,7 @@ So, I created this website using HTML and CSS to represent my small journey. I a
                     <img src="image_4a8ef83b-be80-4bea-b008-2894b7db23d320251127_152716.jpg" alt="Digital Literacy">
                     <img src="image_4b4f29fb-0c73-4b31-b415-bec188cb93f420251127_152709.jpg" alt="Business Email">
                     <img src="image_7a1a80a2-771a-43ee-8a05-2dff0d29734520251127_152714.jpg" alt="Participation on CP Contest">
+                    <img src="image_d6d35ed3-1002-4aff-83ba-1c03b3a8e47220251127_152706.jpg" alt="Business Communication">
                 </div>
                 </section>
 
@@ -289,6 +290,7 @@ So, I created this website using HTML and CSS to represent my small journey. I a
 
     
 </html>
+
 
 
 
