--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="header-text">
                 <h1>Hi, I'm Sultana</h1>
                 <p>Full-stack Developer | </p>
-                <a href="#DownloadCV" class="btn">Download my CV</a>
+                    <a href="Sultana_Jahan_Tahmina.pdf" download class="btn">Download my CV</a>
                 <a href="#contact" class="btn">Contact me</a>
                 </div>
             </div>
@@ -237,17 +237,17 @@ So, I created this website using HTML and CSS to represent my small journey. I a
             <section id="connect">
                 <div class="container">
                     <h2>Get Connected with Me</h2>
-                    <a href=""><i class="devicon-linkedin-plain"></i></a>
-                    <a href=""><i class="devicon-facebook-plain"></i></a>
-                    <a href=""><i class="fab fa-whatsapp-square"></i></a>
-                    <a href=""><i class="devicon-github-original"></i></a>
+                    <a href="https://www.linkedin.com/in/sultana-jahan-tahmina-621aa2243?"><i class="devicon-linkedin-plain"></i></a>
+                    <a href="https://www.facebook.com/share/16vJhW5tQy/"><i class="devicon-facebook-plain"></i></a>
+                    <a href="mailto:+8801986799171"><i class="fab fa-whatsapp-square"></i></a>
+                    <a href="https://github.com/SULTANA2219"><i class="devicon-github-original"></i></a>
                 </div>
             </section>
 
             <section id="download-cv">
                 <div class="container">
                     <h2>Download My CV</h2>
-                    <a href="Sultana_CV.pdf" download class="btn">Download CV</a>
+                    <a href="Sultana_Jahan_Tahmina.pdf" download class="btn">Download CV</a>
                 </div>
             </section>
         </div>
