--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ Working on this project in November 2025 was a great experience, and the company
                     <h3>Sultana's Brand</h3>
                     <p>Inspired by my mother's expertise in sewing and embroidery, I began practicing various stitches back in 2017. In December of last year, I decided to learn embroidery properly and continued until mid-2025. During this time, I explored different stitches, the history of embroidery, various sectors within the field, and color combinations. Although I didn’t receive much positive feedback, I believe every effort deserves a place in my showcase.
 So, I created this website using HTML and CSS to represent my small journey. I also have a future business plan for Sultana’s Brand, as I dream of contributing to reducing unemployment in my country—there are so many skilled and talented people in this craft.</p>
-                    <a href=""><i class="fas fa-link"></i></a>
+                    <a href="https://sultana2219.github.io/SultanasBrand25-/"><i class="fas fa-link"></i></a>
                     <a href=""><i class="fas fa-code"></i></a>
                 </div>
                 <div class="project">
@@ -325,4 +325,5 @@ So, I created this website using HTML and CSS to represent my small journey. I a
 
     
 </html>
+
 
