--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <img src="Me.jpg" alt="Sultana, Passionate Coder">
                 <div class="header-text">
                 <h1>Hi, I'm Sultana</h1>
-                <p>Full-stack Developer | </p>
+                <p>MERN Stack Developer| </p>
                     <a href="Sultana_Jahan_Tahmina.pdf" download class="btn">Download my CV</a>
                 <a href="#contact" class="btn">Contact me</a>
                 </div>
@@ -325,6 +325,7 @@ So, I created this website using HTML and CSS to represent my small journey. I a
 
     
 </html>
+
 
 
 
